--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,7 @@ services:
         window: 120s
     environment:
       CASSANDRA_BROADCAST_ADDRESS: 192.168.99.101
+      CASSANDRA_LISTEN_ADDRESS: 192.168.99.101
     volumes:
     - volume1:/var/lib/cassandra
     - casconfig1:/etc/cassandra
@@ -36,6 +37,7 @@ services:
         window: 120s
     environment:
       CASSANDRA_BROADCAST_ADDRESS: 192.168.99.102
+      CASSANDRA_LISTEN_ADDRESS: 192.168.99.102
       CASSANDRA_SEEDS: 192.168.99.101
     depends_on:
       - cassandra-1
