--- a/worker/cassandra.yaml
+++ b/worker/cassandra.yaml
@@ -422,7 +422,7 @@ seed_provider:
       parameters:
           # seeds is actually a comma-delimited list of addresses.
           # Ex: "<ip1>,<ip2>,<ip3>"
-          - seeds: "10.0.0.4,192.168.99.100"
+          - seeds: "10.0.0.50"
 
 # For workloads with more data than can fit in memory, Cassandra's
 # bottleneck will be reads that need to fetch data from
@@ -596,7 +596,7 @@ ssl_storage_port: 7001
 #
 # Setting listen_address to 0.0.0.0 is always wrong.
 #
-listen_address: 10.0.0.4
+listen_address: 10.0.0.50
 
 # Set listen_address OR listen_interface, not both. Interfaces must correspond
 # to a single address, IP aliasing is not supported.
@@ -610,7 +610,7 @@ listen_address: 10.0.0.4
 
 # Address to broadcast to other Cassandra nodes
 # Leaving this blank will set it to the same value as listen_address
-broadcast_address: 192.168.99.101
+broadcast_address: 10.0.0.50
 
 # When using multiple physical network interfaces, set this
 # to true to listen on broadcast_address in addition to
@@ -659,7 +659,7 @@ native_transport_port: 9042
 # native_transport_max_concurrent_connections_per_ip: -1
 
 # Whether to start the thrift rpc server.
-start_rpc: true
+start_rpc: false
 
 # The address or interface to bind the Thrift RPC service and native transport
 # server to.
@@ -692,7 +692,7 @@ rpc_port: 9160
 # be set to 0.0.0.0. If left blank, this will be set to the value of
 # rpc_address. If rpc_address is set to 0.0.0.0, broadcast_rpc_address must
 # be set.
-broadcast_rpc_address: 192.168.99.101
+broadcast_rpc_address: 10.0.0.50
 
 # enable or disable keepalive on rpc/native connections
 rpc_keepalive: true
