--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   cassandra1:
-    image: mycas
+    image: mycas:latest
     deploy:
       replicas: 1
       placement:
@@ -26,7 +26,7 @@ services:
     networks:
       default:
   cassandra2:
-    image: mycas
+    image: mycas:latest
     deploy:
       replicas: 1
       placement:
